--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
+    "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "cross-env": "^5.0.5",
     "mocha": "^3.5.3"
